[package]
name = "chomp1"
version = "0.3.2"
authors = ["Martin Wernstål <m4rw3r@gmail.com>"]
description = "A fast monadic-style parser combinator designed to work on stable Rust."
documentation = "https://docs.rs/chomp"
homepage = "http://github.com/jedisct1/rust-chomp1"
repository = "http://github.com/jedisct1/rust-chomp1"
readme = "README.md"
keywords = ["parser", "parser-combinators", "parsing", "streaming"]
license = "MIT/Apache-2.0"
build = "build.rs"
edition = "2018"

include = [
    "benches/**/*.rs",
    "examples/**/*.rs",
    "src/**/*.rs",
    "tests/**/*.rs",
    ".gitignore",
    "CHANGELOG.md",
    "README.md",
    "Cargo.toml",
]

[dependencies]
bitflags = "1.3.2"
conv = { version = "0.3.3" }
either = { version = "1.1.0" }
debugtrace = { version = "0.1.0" }
tendril = { version = "0.4.3", optional = true }

compiletest_rs = "0.7.1"
clippy = { version = ">0.0.1", optional = true }

[build-dependencies]
rustc_version = { version = "0.4.0" }

[dev-dependencies]
benchmark-simple = "0.1.7"

[features]
backtrace = []
default = ["std"]
noop_error = []
std = []
unstable = []

[[bench]]
name = "benchmark"
harness = false
