[package]
name = "chomp1"
version = "0.3.3"
authors = ["Martin Wernstål <m4rw3r@gmail.com>"]
description = "A fast monadic-style parser combinator designed to work on stable Rust."
documentation = "https://docs.rs/chomp1"
homepage = "http://github.com/jedisct1/rust-chomp1"
repository = "http://github.com/jedisct1/rust-chomp1"
readme = "README.md"
keywords = ["parser", "parser-combinators", "parsing", "streaming"]
license = "MIT/Apache-2.0"
edition = "2018"

include = [
    "benches/**/*.rs",
    "examples/**/*.rs",
    "src/**/*.rs",
    "tests/**/*.rs",
    ".gitignore",
    "CHANGELOG.md",
    "README.md",
    "Cargo.toml",
]

[dependencies]
bitflags = "2.2.1"
conv = "0.3.3"
either = "1.8.1"
debugtrace = "0.1.0"
tendril = { version = "0.4.3", optional = true }

compiletest_rs = "0.10.1"
clippy = { version = ">0.0.1", optional = true }

[dev-dependencies]
benchmark-simple = "0.1.7"

[features]
default = ["std"]
noop_error = []
std = []
unstable = []

[[bench]]
name = "benchmark"
harness = false
